--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        
+        <h1>2 Truths and a lie</h1>
+        <ul class="list">
+            <li class="list__item">
+                Found more than 5 explosive devices in Afghanistan.
+            </li>
+            <li class="list__item">
+                Completed a full marathon (26.2 miles).
+            </li>
+            <li class="list__item">
+                Competed in the 2012 NFL combine and was signed undrafted by the New Orleans Saints
+            </li>
+        </ul>
+
         
     </body>
 </html>
